# cs6140-assignments

./: .gitignore  README.md  cs6140-assignments.code-workspace
assignments/: README.md  pyproject.toml  requirements.txt
assignments/dataset/assignment1/: montreal_listings.csv  tokyo_listings.csv  washington_listings.csv
assignments/dataset/assignment3/: 15-testcar.csv  16-testcar.csv
assignments/src/: main.py
assignments/src/assignment1/: main.py  notebook.ipynb
assignments/src/assignment1/tasks/: __init__.py  correlation_analysis.py  description_statistics.py  descriptive_statistics.py  distribution_analysis.py  keyword_extraction.py  neighborhood_comparision.py  neighborhood_comparison.py  outlier_detection.py  price_analysis.py  text_length.py
assignments/src/assignment1/utils/: __init__.py  download_dataset.py
assignments/src/assignment2/: notebook.ipynb  notebook2.ipynb
assignments/src/assignment3/: notebook.ipynb  notebook2.html  notebook2.ipynb
assignments/src/assignment4/: notebook1.ipynb  notebook2.ipynb
assignments/src/core/: load_data.py  path_utils.py
assignments/src/regression/: imputation_techniques.ipynb  regression_starter_program.ipynb
