[tool.poetry]
name = "assignments"
version = "0.1.0"
description = ""
authors = ["Sukhrob Ilyosbekov <SuxrobGM@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pandas = "^2.2.2"
requests = "^2.32.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
